@@ -23,6 +23,7 @@ Revision:
 * #307: imProfile: thumb and resized pictures are deleted when deleting or replacing the tribe image | ticket from addons (Phoenyx)
 * #308: imProfile: when editing a picture you can no longer delete or replace it | ticket from addons (Phoenyx)
 * #783: fixed OpenID Login switcher (Phoenyx)
+* #787: Properly modifies the imagecategory table during an upgrade from previous versions (skenow)
 
 === Impresscms 1.2 Beta ===
 Release date: 5 Sep 2009
